namespace Terriflux.Programs.Model.Cell
{
    public enum FlowKind
    {
        // error kind
        NOTHING,
        // ex: for a car factory
        ELECTRICITY,
        RAW_MATERIAL,
        // ex: for fields
        WATER,
        CEREALS,
        // ex : for an company
        MANUFACTURED_MERCHANDISE,
        // ex : swamill
        WOOD,
        WOODEN_PLANK
    }
}